<resources>
    <string name="app_name">GrowingDegreeDay</string>
    <string name="title_activity_map_screen">Map</string>
    <string name="title_activity_hub_screen">HubScreenActivity</string>
    <string name="title_activity_graph_screen">GraphScreen</string>
    <string name="get_location_button">Get Location</string>
    <string name="latitude_title">Latitude</string>
    <string name="muncie_longitude">-85.3864</string>
    <string name="muncie_latitude">40.1934</string>
    <string name="longitude_title">Longitude</string>
    <string name="see_map">See Map</string>
    <string name="show_all_data_text">Show All data</string>
    <string name="show_this_year_s_current_data">Show This Year\'s Current Data</string>
    <string name="show_this_year_s_min_temperatures">Show this Year\'s Min Temperatures</string>
    <string name="show_current_forecast">Show Current Forecast</string>
    <string name="Latitude_Title">Latitude:</string>
    <string name="initial_latitude">40.116</string>
    <string name="Longitude_title">Longitude:</string>
    <string name="view_graph">View Graph</string>
    <string name="view_table">View Table</string>
    <string name="receive_notifications">Receive Notifications</string>
    <string name="cumulative_gdd_data">Cumulative GDD Data</string>
    <string name="this_year_s_gdd_data">This Year\'s GDD Data</string>
    <string name="current_year_min_data">Current Year Min Data</string>
    <string name="forecasted_data">Forecasted Data</string>
    <string name="personal_settings_screen">Personal Settings</string>
    <string name="gdd_start">GDD Start:</string>
    <string name="corn_maturity_days">Corn Maturity Days:</string>
    <string name="freeze_temperature">Freeze Temperature:</string>
    <string name="save_settings">Save Settings</string>
    <string name="testString">test</string>
    <string name="vegetation_stage">Vegetation Stage</string>
    <string name="Acc_GDD">Acc GDD</string>
    <string-array name="Months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="corn_maturity_days_array">
        <item>72</item>
        <item>73</item>
        <item>74</item>
        <item>75</item>
        <item>76</item>
        <item>77</item>
        <item>78</item>
        <item>79</item>
        <item>80</item>
        <item>81</item>
        <item>82</item>
        <item>83</item>
        <item>84</item>
        <item>85</item>
        <item>86</item>
        <item>87</item>
        <item>88</item>
        <item>89</item>
        <item>90</item>
        <item>91</item>
        <item>92</item>
        <item>93</item>
        <item>94</item>
        <item>95</item>
        <item>96</item>
        <item>97</item>
        <item>98</item>
        <item>99</item>
        <item>100</item>
        <item>101</item>
        <item>102</item>
        <item>103</item>
        <item>104</item>
        <item>105</item>
        <item>106</item>
        <item>107</item>
        <item>108</item>
        <item>109</item>
        <item>110</item>
        <item>111</item>
        <item>112</item>
        <item>113</item>
        <item>114</item>
        <item>115</item>
        <item>116</item>
        <item>117</item>
        <item>118</item>
        <item>119</item>
        <item>120</item>
        <item>121</item>
        <item>122</item>
        <item>123</item>
        <item>124</item>
        <item>125</item>
        <item>126</item>
        <item>127</item>
        <item>128</item>
        <item>129</item>
        <item>130</item>
        <item>131</item>
        <item>132</item>
        <item>133</item>
        <item>134</item>
        <item>135</item>
    </string-array>
    <string-array name="daysOfMonth">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="freezingTemps">
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
    </string-array>
    <string-array name="selectionOptions">
        <item>GDD Accumulation</item>
        <item>V2</item>
        <item>V4</item>
        <item>V6</item>
        <item>V8</item>
        <item>V10</item>
        <item>Silking Layer</item>
        <item>Black Layer</item>
    </string-array>
    <string-array name="accumulatedDetails">
        <item>Accumulated GDD</item>
        <item>Vegetation Stage</item>
    </string-array>
</resources>
