<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gdd.harrison.memdust.growingdegreeday.OnlineDataTestActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="15sp"
            android:paddingRight="15sp">

            <Button
                android:id="@+id/AllDataButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_all_data_text" />

            <Button
                android:id="@+id/CurrentDataButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_this_year_s_current_data"
                />

            <Button
                android:id="@+id/CurrentMinButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_this_year_s_min_temperatures" />

            <Button
                android:id="@+id/CurrentForecastButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_current_forecast" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
